syntax = "proto3";
package etherean;

import "decimal.proto";
import "money.proto";
import "uniswap.proto";
import "user_wallet.proto";

service EthereanGrpc {
  rpc GetLidoRewardsWidget (LidoRewardsRequest)
      returns (LidoRewardsWidgetReply);
  rpc GetUniswapRewardsWidget (UniswapRewardsRequest)
      returns (UniswapRewardsWidgetReply);
}

message LidoRewardsRequest {
  etherean.type.UserWallet user_wallet = 1; 
  optional uint32 limit = 2; // count of days for calculate rewards e.g.
                             // 1/7/31 days if NULL then all days
}

message LidoRewardsWidgetReply {
  google.type.Decimal steth_rewarded = 1;
  google.type.Money steth_rewarded_in_usd = 2;
  google.type.Decimal apr = 3;
  google.type.Decimal average_apr = 4;
}

message UniswapRewardsRequest {
  etherean.type.UserWallet user_wallet = 1; 
  // list of tokens e.g. ["ETH", "DAI", "USDC"]
  repeated etherean.uniswap.TokenFilter tokens = 2;
}

message UniswapRewardsWidgetReply {
  map<string, etherean.uniswap.TokenInfo> tokens = 1;
  google.type.Money deposited_amount_fiat = 2;
  google.type.Money collected_rewards_fiat = 3;
  google.type.Money withdrawn_rewards_fiat = 4;
}
